--- a/Sliding_window/cnn_mfcc_finished.ipynb
+++ b/Sliding_window/cnn_mfcc_finished.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7e75e7a1-9ddd-4734-8ff9-424dee2dfc23",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "8b995d86-ca8f-4071-ad58-cddd7ffc7d2c",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "class F2Score(tf.keras.metrics.Metric):\n",
-    "    def __init__(self, name='f2_score', threshold=0.5, **kwargs):\n",
+    "    def __init__(self, name='f2_score', threshold=0.3, **kwargs):\n",
     "        super(F2Score, self).__init__(name=name, **kwargs)\n",
     "        self.threshold = threshold\n",
     "        self.tp = self.add_weight(name='tp', initializer='zeros')\n",
@@ -86,40 +86,41 @@
     "        self.fp.assign(0)\n",
     "        self.fn.assign(0)\n",
     "\n",
-    "class MemoryBestWeights(Callback):\n",
-    "    def __init__(self, monitor='val_f2_score', mode='max'):\n",
+    "class F2ScoreLogger(Callback):\n",
+    "    def __init__(self, validation_data, threshold=0.3):\n",
     "        super().__init__()\n",
-    "        self.monitor = monitor\n",
-    "        self.mode = mode\n",
-    "\n",
-    "        if self.mode == 'min':\n",
-    "            self.best = np.Inf\n",
-    "            self.monitor_op = np.less\n",
-    "        else:\n",
-    "            self.best = -np.Inf\n",
-    "            self.monitor_op = np.greater\n",
-    "\n",
+    "        self.X_val, self.y_val = validation_data\n",
+    "        self.threshold = threshold\n",
+    "        self.y_preds = []\n",
+    "        self.f2_scores = []\n",
+    "        self.recalls = []\n",
+    "        self.precisions = []\n",
     "        self.best_weights = None\n",
+    "        self.best_f2 = 0\n",
     "\n",
     "    def on_epoch_end(self, epoch, logs=None):\n",
-    "        current = logs.get(self.monitor)\n",
-    "        if current is None:return\n",
-    "        if self.monitor_op(current, self.best):\n",
-    "            self.best = current\n",
-    "            try:self.best_weights = self.model.get_weights()\n",
-    "            except Exception as e:\n",
-    "                print(f\"[Warning] Failed to get weights at epoch {epoch}: {e}\")\n",
+    "        y_pred_prob = self.model.predict(self.X_val, verbose=0)\n",
+    "        y_pred = (y_pred_prob > self.threshold).astype('int32')\n",
+    "        recall = recall_score(self.y_val, y_pred)\n",
+    "        precision = precision_score(self.y_val, y_pred)\n",
+    "        f2 = 5 / ((4 / recall) + (1 / precision)) if recall and precision else 0\n",
+    "\n",
+    "        self.y_preds.append(y_pred)\n",
+    "        self.recalls.append(recall)\n",
+    "        self.precisions.append(precision)\n",
+    "        self.f2_scores.append(f2)\n",
+    "\n",
+    "        if f2 > self.best_f2:\n",
+    "            self.best_f2 = f2\n",
+    "            self.best_weights = self.model.get_weights()\n",
     "\n",
     "    def on_train_end(self, logs=None):\n",
-    "        if self.best_weights is not None:\n",
-    "            self.model.set_weights(self.best_weights)\n",
-    "            print(f\"Restored best weights from {self.monitor} = {self.best:.4f}\")\n",
-    "        else:print(\"No improvement was tracked; model weights not restored.\")"
+    "        if self.best_weights is not None:self.model.set_weights(self.best_weights)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8744513c-16e3-476e-92db-44dc9c909fbc",
    "metadata": {},
    "outputs": [
@@ -136,42 +137,25 @@
       "  Kernel Reg L2  : 0.01\n",
       "----------------------------------------\n",
       "Fold : 1\n",
-      "Epoch 1/100\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-04-15 15:18:08.466147: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M4 Pro\n",
-      "2025-04-15 15:18:08.466190: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 24.00 GB\n",
-      "2025-04-15 15:18:08.466202: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 8.00 GB\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1744705088.466661 22641049 pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "I0000 00:00:1744705088.466699 22641049 pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+      "Epoch 1/100\n",
+      "442/450 [============================>.] - ETA: 0s - loss: 1.0427 - f2_score: 0.5988"
      ]
     },
     {
      "ename": "AttributeError",
-     "evalue": "module 'keras.backend' has no attribute 'cast'",
+     "evalue": "'NoneType' object has no attribute 'append'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 64\u001b[0m\n\u001b[1;32m     61\u001b[0m reduce_lr \u001b[38;5;241m=\u001b[39m ReduceLROnPlateau(monitor\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mval_loss\u001b[39m\u001b[38;5;124m'\u001b[39m, factor\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m, patience\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m, min_lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-6\u001b[39m, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m     62\u001b[0m memory_best \u001b[38;5;241m=\u001b[39m MemoryBestWeights(monitor\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mval_f2_score\u001b[39m\u001b[38;5;124m'\u001b[39m, mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmax\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 64\u001b[0m history \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     65\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mvalidation_data\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mX_val\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_val\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     66\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     67\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbatch_size\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     68\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mcallbacks\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43mreduce_lr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmemory_best\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     69\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     71\u001b[0m epoch_recalls \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     72\u001b[0m epoch_precisions \u001b[38;5;241m=\u001b[39m []\n",
-      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/keras/src/utils/traceback_utils.py:122\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    119\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[1;32m    120\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m    121\u001b[0m     \u001b[38;5;66;03m# `keras.config.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m--> 122\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    123\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    124\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
-      "Cell \u001b[0;32mIn[4], line 10\u001b[0m, in \u001b[0;36mF2Score.update_state\u001b[0;34m(self, y_true, y_pred, sample_weight)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mupdate_state\u001b[39m(\u001b[38;5;28mself\u001b[39m, y_true, y_pred, sample_weight\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m---> 10\u001b[0m     y_pred \u001b[38;5;241m=\u001b[39m \u001b[43mK\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcast\u001b[49m(y_pred \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mthreshold, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfloat32\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     11\u001b[0m     y_true \u001b[38;5;241m=\u001b[39m K\u001b[38;5;241m.\u001b[39mcast(y_true, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfloat32\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     13\u001b[0m     tp \u001b[38;5;241m=\u001b[39m K\u001b[38;5;241m.\u001b[39msum(y_true \u001b[38;5;241m*\u001b[39m y_pred)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'keras.backend' has no attribute 'cast'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 59\u001b[0m\n\u001b[0;32m     56\u001b[0m reduce_lr \u001b[38;5;241m=\u001b[39m ReduceLROnPlateau(monitor\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mval_loss\u001b[39m\u001b[38;5;124m'\u001b[39m, factor\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m, patience\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m, min_lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-6\u001b[39m, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     57\u001b[0m f2_logger \u001b[38;5;241m=\u001b[39m F2ScoreLogger(validation_data\u001b[38;5;241m=\u001b[39m(X_val, y_val), threshold\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.3\u001b[39m)\n\u001b[1;32m---> 59\u001b[0m history \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     60\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mvalidation_data\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mX_val\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_val\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     61\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     62\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbatch_size\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     63\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mcallbacks\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43mreduce_lr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mf2_logger\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     64\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     66\u001b[0m best_f2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(f2_logger\u001b[38;5;241m.\u001b[39mf2_scores)\n\u001b[0;32m     67\u001b[0m best_recall \u001b[38;5;241m=\u001b[39m f2_logger\u001b[38;5;241m.\u001b[39mrecalls[np\u001b[38;5;241m.\u001b[39margmax(f2_logger\u001b[38;5;241m.\u001b[39mf2_scores)]\n",
+      "File \u001b[1;32mc:\\Users\\bhuri\\anaconda3\\envs\\tensorflowgpu\\lib\\site-packages\\keras\\utils\\traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m     68\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m     69\u001b[0m     \u001b[38;5;66;03m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     71\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m     72\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "Cell \u001b[1;32mIn[3], line 45\u001b[0m, in \u001b[0;36mF2ScoreLogger.on_epoch_end\u001b[1;34m(self, epoch, logs)\u001b[0m\n\u001b[0;32m     42\u001b[0m precision \u001b[38;5;241m=\u001b[39m precision_score(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39my_val, y_pred)\n\u001b[0;32m     43\u001b[0m f2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m \u001b[38;5;241m/\u001b[39m ((\u001b[38;5;241m4\u001b[39m \u001b[38;5;241m/\u001b[39m recall) \u001b[38;5;241m+\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m/\u001b[39m precision)) \u001b[38;5;28;01mif\u001b[39;00m recall \u001b[38;5;129;01mand\u001b[39;00m precision \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m---> 45\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43my_preds\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m(y_pred)\n\u001b[0;32m     46\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrecalls\u001b[38;5;241m.\u001b[39mappend(recall)\n\u001b[0;32m     47\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprecisions\u001b[38;5;241m.\u001b[39mappend(precision)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'append'"
      ]
     }
    ],
    "source": [
-    "best_model_f2 = 0\n",
-    "def custom_f2(recall, precision):\n",
-    "    if recall == 0 or precision == 0:\n",
-    "        return 0\n",
-    "    return 5 / ((4 / recall) + (1 / precision))\n",
-    "\n",
     "os.makedirs(\"grid_search_outputs\", exist_ok=True)\n",
     "\n",
     "batch_sizes = [16]\n",
@@ -185,7 +169,7 @@
     "results = []\n",
     "best_model = None\n",
     "best_model_config_id = None\n",
-    "unused_best_model_recall = 0\n",
+    "best_model_f2 = 0\n",
     "\n",
     "for i, (batch_size, lr, hidden_size, dropout_rate, kernel_reg) in enumerate(param_combinations):\n",
     "    fold_recalls = []\n",
@@ -203,6 +187,7 @@
     "        print(f\"  Kernel Reg L2  : {kernel_reg}\")\n",
     "        print(\"-\" * 40)\n",
     "        print(f\"Fold : {fold+1}\")\n",
+    "\n",
     "        X_train, X_val = Train_data[fold], Val_data[fold]\n",
     "        y_train, y_val = Train_label[fold], Val_label[fold]\n",
     "\n",
@@ -225,41 +210,28 @@
     "        ])\n",
     "\n",
     "        model.compile(optimizer=Adam(learning_rate=lr), loss='binary_crossentropy', metrics=[F2Score(name='f2_score')])\n",
-    "\n",
+    "        \n",
     "        reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=5, min_lr=1e-6, verbose=0)\n",
-    "        memory_best = MemoryBestWeights(monitor='val_f2_score', mode='max')\n",
+    "        f2_logger = F2ScoreLogger(validation_data=(X_val, y_val), threshold=0.3)\n",
     "\n",
     "        history = model.fit(X_train, y_train,\n",
     "                            validation_data=(X_val, y_val),\n",
     "                            epochs=100,\n",
     "                            batch_size=batch_size,\n",
-    "                            callbacks=[reduce_lr, memory_best],\n",
+    "                            callbacks=[reduce_lr, f2_logger],\n",
     "                            verbose=1)\n",
     "\n",
-    "        epoch_recalls = []\n",
-    "        epoch_precisions = []\n",
-    "        epoch_f2_scores = []\n",
-    "        for epoch in range(100):\n",
-    "            y_pred = (model.predict(X_val, verbose=0) > 0.3).astype('int32')\n",
-    "            recall = recall_score(y_val, y_pred)\n",
-    "            precision = precision_score(y_val, y_pred)\n",
-    "            f2 = custom_f2(recall, precision)\n",
-    "            epoch_recalls.append(recall)\n",
-    "            epoch_precisions.append(precision)\n",
-    "            epoch_f2_scores.append(f2)\n",
-    "\n",
-    "        best_epoch = int(np.argmax(epoch_f2_scores))\n",
-    "        best_f2 = epoch_f2_scores[best_epoch]\n",
-    "        best_recall = epoch_recalls[best_epoch]\n",
+    "        best_f2 = max(f2_logger.f2_scores)\n",
+    "        best_recall = f2_logger.recalls[np.argmax(f2_logger.f2_scores)]\n",
     "\n",
     "        fold_recalls.append(best_recall)\n",
     "        fold_f2_scores.append(best_f2)\n",
     "        fold_histories.append(history)\n",
-    "        y_pred = (model.predict(X_val, verbose=0) > 0.3).astype(\"int32\")\n",
+    "        y_pred = f2_logger.y_preds[fold]\n",
     "        cm = confusion_matrix(y_val, y_pred)\n",
     "        fold_conf_matrices.append((cm, y_val, y_pred))\n",
     "        \n",
-    "        clear_output(wait=True)\n",
+    "        clear_output(wait=False)\n",
     "\n",
     "    best_fold = int(np.argmax(fold_f2_scores))\n",
     "    avg_f2 = np.mean(fold_f2_scores)\n",
@@ -387,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "525b5823-1dbf-4e24-9019-7ca6399e8b8d",
    "metadata": {},
    "outputs": [],
@@ -398,7 +370,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "tensorflowgpu",
    "language": "python",
    "name": "python3"
   },
@@ -412,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
