--- a/Sliding_window/cnn_mfcc_finished.ipynb
+++ b/Sliding_window/cnn_mfcc_finished.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7e75e7a1-9ddd-4734-8ff9-424dee2dfc23",
    "metadata": {},
    "outputs": [],
@@ -19,14 +19,14 @@
     "from keras.metrics import Metric\n",
     "from IPython.display import clear_output\n",
     "from keras.callbacks import ReduceLROnPlateau, Callback\n",
-    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, precision_score, recall_score\n",
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, accuracy_score, precision_score, recall_score\n",
     "from keras.optimizers import Adam\n",
     "from keras.regularizers import l2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8b995d86-ca8f-4071-ad58-cddd7ffc7d2c",
    "metadata": {},
    "outputs": [
@@ -48,10 +48,14 @@
     "Train_label=np.load(f'../make_stored_data/{DATA_type}/Train_lebel.npy')\n",
     "Val_data=np.load(f'../make_stored_data/{DATA_type}/Val_data.npy')\n",
     "Val_label=np.load(f'../make_stored_data/{DATA_type}/Val_lebel.npy')\n",
+    "Test_data=np.load(f'../make_stored_data/{DATA_type}/Test_data.npy')\n",
+    "Test_label=np.load(f'../make_stored_data/{DATA_type}/Test_lebel.npy')\n",
     "print(np.shape(Train_data))\n",
     "print(np.shape(Train_label))\n",
     "print(np.shape(Val_data))\n",
-    "print(np.shape(Val_label))"
+    "print(np.shape(Val_label))\n",
+    "print(np.shape(Test_data))\n",
+    "print(np.shape(Test_label))"
    ]
   },
   {
@@ -223,12 +227,13 @@
     "\n",
     "        best_f2 = max(f2_logger.f2_scores)\n",
     "        best_recall = f2_logger.recalls[np.argmax(f2_logger.f2_scores)]\n",
+    "        best_epoch = int(np.argmax(f2_logger.f2_scores))\n",
+    "        y_pred = f2_logger.y_preds[best_epoch]\n",
+    "        cm = confusion_matrix(y_val, y_pred)\n",
     "\n",
     "        fold_recalls.append(best_recall)\n",
     "        fold_f2_scores.append(best_f2)\n",
     "        fold_histories.append(history)\n",
-    "        y_pred = f2_logger.y_preds[fold]\n",
-    "        cm = confusion_matrix(y_val, y_pred)\n",
     "        fold_conf_matrices.append((cm, y_val, y_pred))\n",
     "        \n",
     "        clear_output(wait=False)\n",
@@ -255,13 +260,12 @@
     "        'confusion_matrix': best_cm\n",
     "    })\n",
     "\n",
-    "    if avg_f2 > best_model_f2:\n",
-    "        best_model_f2 = avg_f2\n",
+    "    if fold_f2_scores[best_fold] > best_model_f2:\n",
+    "        best_model_f2 = fold_f2_scores[best_fold]\n",
     "        best_model_config_id = i\n",
     "        best_model = {\n",
     "            'history': best_history,\n",
     "            'confusion_matrix': best_cm,\n",
-    "            'model': model\n",
     "        }"
    ]
   },
@@ -351,7 +355,38 @@
     "\n",
     "disp = ConfusionMatrixDisplay(confusion_matrix=best_cm, display_labels=[\"Normal\", \"Abnormal\"])\n",
     "disp.plot(cmap=plt.cm.Blues, ax=axes[1, 1])\n",
-    "axes[1, 1].set_title(\"Best Model Confusion Matrix\")\n",
+    "axes[1, 1].set_title(\"Best Model Confusion Matrix (Validation)\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53dc3699",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.set_weights(f2_logger.best_weights)\n",
+    "Test_pred = (model.predict(Test_data) > 0.3).astype(\"int32\")\n",
+    "\n",
+    "Test_acc = accuracy_score(Test_label, Test_pred)\n",
+    "Test_precision = precision_score(Test_label, Test_pred)\n",
+    "Test_recall = recall_score(Test_label, Test_pred)\n",
+    "Test_f2 = 5 / ((4 / Test_recall) + (1 / Test_precision)) if recall and precision else 0\n",
+    "Test_cm = confusion_matrix(Test_label, Test_pred)\n",
+    "\n",
+    "print(\"=== Test Set Performance ===\")\n",
+    "print(f\"Accuracy  : {Test_acc:.4f}\")\n",
+    "print(f\"Precision : {Test_precision:.4f}\")\n",
+    "print(f\"Recall    : {Test_recall:.4f}\")\n",
+    "print(f\"F2 Score  : {Test_f2:.4f}\")\n",
+    "print(\"Confusion Matrix:\")\n",
+    "\n",
+    "disp = ConfusionMatrixDisplay(confusion_matrix=Test_cm, display_labels=[\"Normal\", \"Abnormal\"])\n",
+    "disp.plot(cmap=plt.cm.Blues, ax=axes[1, 1])\n",
+    "axes[1, 1].set_title(\"Best Model Confusion Matrix (Test)\")\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -364,7 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_model['model'].save(f'../new_model/{Model_name}.h5')"
+    "model.save(f'../new_model/{Model_name}.h5')"
    ]
   }
  ],
