--- a/Make_stored_DATA/mfcc_kan_1.ipynb
+++ b/Make_stored_DATA/mfcc_kan_1.ipynb
@@ -341,11 +341,11 @@
    "outputs": [],
    "source": [
     "np.save(f'{DATA_type}/Train_data.npy', EVERY_Fold_data_train_download)\n",
-    "np.save(f'{DATA_type}/Train_lebel.npy', EVERY_Fold_label_train_download)\n",
+    "np.save(f'{DATA_type}/Train_label.npy', EVERY_Fold_label_train_download)\n",
     "np.save(f'{DATA_type}/Val_data.npy', EVERY_Fold_data_val_download)\n",
-    "np.save(f'{DATA_type}/Val_lebel.npy', EVERY_Fold_label_val_download)\n",
+    "np.save(f'{DATA_type}/Val_label.npy', EVERY_Fold_label_val_download)\n",
     "np.save(f'{DATA_type}/Test_data.npy', Test_data)\n",
-    "np.save(f'{DATA_type}/Test_lebel.npy', Test_label)"
+    "np.save(f'{DATA_type}/Test_label.npy', Test_label)"
    ]
   }
  ],
