--- a/Sliding_window/cnn_mfcc_finished.ipynb
+++ b/Sliding_window/cnn_mfcc_finished.ipynb
@@ -163,8 +163,8 @@
     "os.makedirs(\"grid_search_outputs\", exist_ok=True)\n",
     "\n",
     "batch_sizes = [16]\n",
-    "learning_rates = [0.0001, 0.0005, 0.001]\n",
-    "hidden_units = [32, 64, 128]\n",
+    "learning_rates = [0.0001, 0.0005]\n",
+    "hidden_units = [32, 64]\n",
     "dropouts = [0.05, 0.1]\n",
     "kernel_regs = [0.01, 0.02]\n",
     "\n",
@@ -374,7 +374,7 @@
     "Test_acc = accuracy_score(Test_label, Test_pred)\n",
     "Test_precision = precision_score(Test_label, Test_pred)\n",
     "Test_recall = recall_score(Test_label, Test_pred)\n",
-    "Test_f2 = 5 / ((4 / Test_recall) + (1 / Test_precision)) if recall and precision else 0\n",
+    "Test_f2 = 5 / ((4 / Test_recall) + (1 / Test_precision)) if Test_recall and Test_precision else 0\n",
     "Test_cm = confusion_matrix(Test_label, Test_pred)\n",
     "\n",
     "print(\"=== Test Set Performance ===\")\n",
@@ -384,8 +384,8 @@
     "print(f\"F2 Score  : {Test_f2:.4f}\")\n",
     "print(\"Confusion Matrix:\")\n",
     "\n",
-    "disp = ConfusionMatrixDisplay(confusion_matrix=Test_cm, display_labels=[\"Normal\", \"Abnormal\"])\n",
-    "disp.plot(cmap=plt.cm.Blues, ax=axes[1, 1])\n",
+    "Test_disp = ConfusionMatrixDisplay(confusion_matrix=Test_cm, display_labels=[\"Normal\", \"Abnormal\"])\n",
+    "Test_disp.plot(cmap=plt.cm.Blues, ax=axes[1, 1])\n",
     "axes[1, 1].set_title(\"Best Model Confusion Matrix (Test)\")\n",
     "\n",
     "plt.tight_layout()\n",
