--- a/Sliding_window/cnn_mfcc_finished.ipynb
+++ b/Sliding_window/cnn_mfcc_finished.ipynb
@@ -385,9 +385,8 @@
     "print(\"Confusion Matrix:\")\n",
     "\n",
     "Test_disp = ConfusionMatrixDisplay(confusion_matrix=Test_cm, display_labels=[\"Normal\", \"Abnormal\"])\n",
-    "Test_disp.plot(cmap=plt.cm.Blues, ax=axes[1, 1])\n",
-    "axes[1, 1].set_title(\"Best Model Confusion Matrix (Test)\")\n",
-    "\n",
+    "Test_disp.plot(cmap=plt.cm.Blues)\n",
+    "plt.title(\"Best Model Confusion Matrix (Test)\")\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -405,7 +404,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflowgpu",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
