--- a/Sliding_window/cnn_mfcc_finished.ipynb
+++ b/Sliding_window/cnn_mfcc_finished.ipynb
@@ -404,7 +404,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "tensorflowgpu",
    "language": "python",
    "name": "python3"
   },
