--- a/Sliding_window/cnn_mfcc_finished.ipynb
+++ b/Sliding_window/cnn_mfcc_finished.ipynb
@@ -45,11 +45,11 @@
     "DATA_type = 'mfcc_cnn_1'\n",
     "Model_name = 'cnn_mfcc_1'\n",
     "Train_data=np.load(f'../make_stored_data/{DATA_type}/Train_data.npy')\n",
-    "Train_label=np.load(f'../make_stored_data/{DATA_type}/Train_lebel.npy')\n",
+    "Train_label=np.load(f'../make_stored_data/{DATA_type}/Train_label.npy')\n",
     "Val_data=np.load(f'../make_stored_data/{DATA_type}/Val_data.npy')\n",
-    "Val_label=np.load(f'../make_stored_data/{DATA_type}/Val_lebel.npy')\n",
+    "Val_label=np.load(f'../make_stored_data/{DATA_type}/Val_label.npy')\n",
     "Test_data=np.load(f'../make_stored_data/{DATA_type}/Test_data.npy')\n",
-    "Test_label=np.load(f'../make_stored_data/{DATA_type}/Test_lebel.npy')\n",
+    "Test_label=np.load(f'../make_stored_data/{DATA_type}/Test_label.npy')\n",
     "print(np.shape(Train_data))\n",
     "print(np.shape(Train_label))\n",
     "print(np.shape(Val_data))\n",
@@ -404,7 +404,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflowgpu",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
