--- a/Sliding_window/cnn_mels_finished-Copy1.ipynb
+++ b/Sliding_window/cnn_mels_finished-Copy1.ipynb
@@ -44,8 +44,8 @@
     }
    ],
    "source": [
-    "DATA_type = 'mels_cnn_1'\n",
-    "Model_name = 'cnn_mels_1'\n",
+    "DATA_type = 'mels_kan_1'\n",
+    "Model_name = 'kan_mels_1'\n",
     "Train_data=np.load(f'../make_stored_data/sliding_window/{DATA_type}/Train_data.npy')\n",
     "Train_label=np.load(f'../make_stored_data/sliding_window/{DATA_type}/Train_label.npy')\n",
     "Val_data=np.load(f'../make_stored_data/sliding_window/{DATA_type}/Val_data.npy')\n",
@@ -126,6 +126,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7b1726cb-5fe9-4cb2-9011-949192e48b74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LearnableBasisFunction(layers.Layer):\n",
+    "    def __init__(self, units):\n",
+    "        super().__init__()\n",
+    "        self.units = units\n",
+    "\n",
+    "    def build(self, input_shape):\n",
+    "        self.kernel = self.add_weight(shape=(input_shape[-2], input_shape[-1], self.units), initializer=\"random_normal\", trainable=True)\n",
+    "        self.offset = self.add_weight(shape=(self.units,) , initializer=\"random_normal\", trainable=True)\n",
+    "        self.basis_coeff = self.add_weight(shape=(self.units, 3), initializer=\"random_normal\", trainable=True)\n",
+    "\n",
+    "    def call(self, inputs):\n",
+    "        x = self.kernel * inputs + self.offset\n",
+    "        basis_fn = self.basis_coeff[..., 0] * x**2 + self.basis_coeff[..., 1] * x + self.basis_coeff[..., 2]\n",
+    "        return tf.nn.relu(basis_fn)\n",
+    "\n",
+    "def create_kan_model(lr):\n",
+    "    inputs = layers.Input(shape=(256, 4))\n",
+    "    x = LearnableBasisFunction(64)(inputs)\n",
+    "    x = LearnableBasisFunction(128)(x)\n",
+    "    x = LearnableBasisFunction(64)(x)\n",
+    "    x = layers.Flatten()(x)\n",
+    "    outputs = layers.Dense(1, activation='sigmoid')(x)\n",
+    "    \n",
+    "    model = models.Model(inputs, outputs)\n",
+    "    model.compile(optimizer=Adam(learning_rate=lr), loss='binary_crossentropy', metrics=[F2Score(name='f2_score')])\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "8744513c-16e3-476e-92db-44dc9c909fbc",
    "metadata": {},
@@ -166,23 +201,7 @@
     "\n",
     "        tf.keras.backend.clear_session()\n",
     "\n",
-    "        model = models.Sequential([\n",
-    "            Input(shape=np.shape(Train_data[0][0])),\n",
-    "            layers.Conv2D(32, (3, 3), activation='relu', padding='same', kernel_regularizer=l2(kernel_reg)),\n",
-    "            layers.BatchNormalization(),\n",
-    "            layers.MaxPooling2D((2, 2), padding='same'),\n",
-    "            layers.Dropout(dropout_rate),\n",
-    "            layers.Conv2D(64, (3, 3), activation='relu', padding='same', kernel_regularizer=l2(kernel_reg)),\n",
-    "            layers.BatchNormalization(),\n",
-    "            layers.MaxPooling2D((2, 2), padding='same'),\n",
-    "            layers.Dropout(dropout_rate),\n",
-    "            layers.Flatten(),\n",
-    "            layers.Dense(hidden_size, activation='relu'),\n",
-    "            layers.Dropout(dropout_rate),\n",
-    "            layers.Dense(1, activation='sigmoid')\n",
-    "        ])\n",
-    "\n",
-    "        model.compile(optimizer=Adam(learning_rate=lr), loss='binary_crossentropy', metrics=[F2Score(name='f2_score')])\n",
+    "        model = create_kan_model(lr)\n",
     "        \n",
     "        reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=5, min_lr=1e-6, verbose=0)\n",
     "        f2_logger = F2ScoreLogger(validation_data=(X_val, y_val), threshold=0.3)\n",
