--- a/Sliding_window/crnn_mels_finished.ipynb
+++ b/Sliding_window/crnn_mels_finished.ipynb
@@ -46,12 +46,12 @@
    "source": [
     "DATA_type = 'mels_cnn_1'\n",
     "Model_name = 'crnn_mels_1'\n",
-    "Train_data=np.load(f'../make_stored_data/{DATA_type}/Train_data.npy')\n",
-    "Train_label=np.load(f'../make_stored_data/{DATA_type}/Train_label.npy')\n",
-    "Val_data=np.load(f'../make_stored_data/{DATA_type}/Val_data.npy')\n",
-    "Val_label=np.load(f'../make_stored_data/{DATA_type}/Val_label.npy')\n",
-    "Test_data=np.load(f'../make_stored_data/{DATA_type}/Test_data.npy')\n",
-    "Test_label=np.load(f'../make_stored_data/{DATA_type}/Test_label.npy')\n",
+    "Train_data=np.load(f'../make_stored_data/sliding_window/{DATA_type}/Train_data.npy')\n",
+    "Train_label=np.load(f'../make_stored_data/sliding_window/{DATA_type}/Train_label.npy')\n",
+    "Val_data=np.load(f'../make_stored_data/sliding_window/{DATA_type}/Val_data.npy')\n",
+    "Val_label=np.load(f'../make_stored_data/sliding_window/{DATA_type}/Val_label.npy')\n",
+    "Test_data=np.load(f'../make_stored_data/sliding_window/{DATA_type}/Test_data.npy')\n",
+    "Test_label=np.load(f'../make_stored_data/sliding_window/{DATA_type}/Test_label.npy')\n",
     "print(np.shape(Train_data))\n",
     "print(np.shape(Train_label))\n",
     "print(np.shape(Val_data))\n",
@@ -131,12 +131,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.makedirs(\"grid_search_outputs\", exist_ok=True)\n",
-    "\n",
     "batch_sizes = [16]\n",
-    "learning_rates = [0.0001, 0.0005]\n",
-    "hidden_units = [32, 64]\n",
-    "dropouts = [0.05, 0.1]\n",
+    "learning_rates = [0.0001]\n",
+    "hidden_units = [64, 128]\n",
+    "dropouts = [0.05, 0.1, 0.2]\n",
     "kernel_regs = [0.01, 0.02]\n",
     "\n",
     "param_combinations = list(itertools.product(batch_sizes, learning_rates, hidden_units, dropouts, kernel_regs))\n",
