--- a/Make_stored_DATA/sliding_window/mels_kan_1.ipynb
+++ b/Make_stored_DATA/sliding_window/mels_kan_1.ipynb
@@ -11,7 +11,7 @@
     "sample_rate = 2000\n",
     "n_fft, n_hop_length = 512, 512\n",
     "window_size, hop_length = int(sample_rate*1.0), sample_rate/4\n",
-    "n_mels = 256\n",
+    "n_mels = 64\n",
     "seed = 958"
    ]
   },
@@ -23,6 +23,7 @@
    "outputs": [],
    "source": [
     "import glob\n",
+    "import torch\n",
     "import random\n",
     "import librosa\n",
     "import numpy as np\n",
@@ -47,7 +48,7 @@
     }
    ],
    "source": [
-    "heart_sound_all = glob.glob('../../heart-new/training/*.wav')\n",
+    "heart_sound_all = glob.glob('../../../heart-new/training/*.wav')\n",
     "heart_sound, heart_sound_test = heart_sound_all[:2620], heart_sound_all[2620:]\n",
     "print(np.shape(heart_sound),np.shape(heart_sound_test))"
    ]
@@ -67,14 +68,14 @@
     }
    ],
    "source": [
-    "with open('../../heart-new/label-all/RECORDS') as file:Record=file.read().splitlines()\n",
+    "with open('../../../heart-new/label-all/RECORDS') as file:Record=file.read().splitlines()\n",
     "\n",
     "def process_labels(folder):\n",
-    "    with open(f'../../heart-new/{folder}/RECORDS') as file:\n",
+    "    with open(f'../../../heart-new/{folder}/RECORDS') as file:\n",
     "        records = file.read().splitlines()\n",
-    "    with open(f'../../heart-new/{folder}/RECORDS-normal') as file:\n",
+    "    with open(f'../../../heart-new/{folder}/RECORDS-normal') as file:\n",
     "        normal = set(file.read().splitlines())\n",
-    "    with open(f'../../heart-new/{folder}/RECORDS-abnormal') as file:\n",
+    "    with open(f'../../../heart-new/{folder}/RECORDS-abnormal') as file:\n",
     "        abnormal = set(file.read().splitlines())\n",
     "    normal_dict = {item: 0 for item in list(normal)}\n",
     "    abnormal_dict = {item: 1 for item in list(abnormal)}\n",
@@ -195,7 +196,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                         \r"
+      "                                                                         "
      ]
     },
     {
@@ -204,6 +205,11 @@
      "text": [
       "Preprocessing and fold assignment complete!\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
     }
    ],
    "source": [
@@ -225,9 +231,9 @@
     "EVERY_Fold_label_val = [[] for i in range(k)]\n",
     "\n",
     "for i, (train_idx, val_idx) in enumerate(folds):\n",
-    "    EVERY_Fold_data_train[i].append(DATA[train_idx])\n",
+    "    EVERY_Fold_data_train[i].append(DATA[train_idx].reshape(7200, -1))\n",
     "    EVERY_Fold_label_train[i].append(LABEL[train_idx])\n",
-    "    EVERY_Fold_data_val[i].append(DATA[val_idx])\n",
+    "    EVERY_Fold_data_val[i].append(DATA[val_idx].reshape(1800, -1))\n",
     "    EVERY_Fold_label_val[i].append(LABEL[val_idx])\n",
     "\n",
     "print(\"Preprocessing and fold assignment complete!\")"
@@ -263,15 +269,14 @@
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": [
-      "\r"
-     ]
+     "text": []
     }
    ],
    "source": [
     "print(\"Preprocessing test dataset...\")\n",
     "DATA_array_test = load_data(heart_sound_test)\n",
-    "Test_data, Test_label = preprocessing(DATA_array_test, LABEL_array_test, length=1000)\n",
+    "Test_data_full, Test_label_full = preprocessing(DATA_array_test, LABEL_array_test, length=1000)\n",
+    "Test_data, Test_label = np.array(Test_data_full, dtype=np.int32).reshape(1000, -1), Test_label_full\n",
     "print(\"Preprocessing complete!\")"
    ]
   },
@@ -285,11 +290,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5, 7200, 256, 4)\n",
+      "(5, 7200, 256)\n",
       "(5, 7200)\n",
-      "(5, 1800, 256, 4)\n",
+      "(5, 1800, 256)\n",
       "(5, 1800)\n",
-      "(1000, 256, 4)\n",
+      "(1000, 256)\n",
       "(1000,)\n"
      ]
     }
@@ -337,22 +342,22 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6b170e14-d478-4827-b68c-c7148342e482",
+   "id": "57b72b6b-7a8e-4d91-8b65-5f787bfe0e2f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(f'{DATA_type}/Train_data.npy', EVERY_Fold_data_train_download)\n",
-    "np.save(f'{DATA_type}/Train_label.npy', EVERY_Fold_label_train_download)\n",
-    "np.save(f'{DATA_type}/Val_data.npy', EVERY_Fold_data_val_download)\n",
-    "np.save(f'{DATA_type}/Val_label.npy', EVERY_Fold_label_val_download)\n",
-    "np.save(f'{DATA_type}/Test_data.npy', Test_data)\n",
-    "np.save(f'{DATA_type}/Test_label.npy', Test_label)"
+    "torch.save(torch.tensor(np.array(EVERY_Fold_data_train_download)), f'{DATA_type}/Train_data.pt')\n",
+    "torch.save(torch.tensor(np.array(EVERY_Fold_label_train_download)), f'{DATA_type}/Train_label.pt')\n",
+    "torch.save(torch.tensor(np.array(EVERY_Fold_data_val_download)), f'{DATA_type}/Val_data.pt')\n",
+    "torch.save(torch.tensor(np.array(EVERY_Fold_label_val_download)), f'{DATA_type}/Val_label.pt')\n",
+    "torch.save(torch.tensor(np.array(Test_data)), f'{DATA_type}/Test_data.pt')\n",
+    "torch.save(torch.tensor(np.array(Test_label)), f'{DATA_type}/Test_label.pt')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflowgpu",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -366,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
