--- a/Make_stored_DATA/sliding_window/mfcc_rnn_1.ipynb
+++ b/Make_stored_DATA/sliding_window/mfcc_rnn_1.ipynb
@@ -47,7 +47,7 @@
     }
    ],
    "source": [
-    "heart_sound_all = glob.glob('../../heart-new/training/*.wav')\n",
+    "heart_sound_all = glob.glob('../../../heart-new/training/*.wav')\n",
     "heart_sound, heart_sound_test = heart_sound_all[:2620], heart_sound_all[2620:]\n",
     "print(np.shape(heart_sound),np.shape(heart_sound_test))"
    ]
@@ -67,14 +67,14 @@
     }
    ],
    "source": [
-    "with open('../../heart-new/label-all/RECORDS') as file:Record=file.read().splitlines()\n",
+    "with open('../../../heart-new/label-all/RECORDS') as file:Record=file.read().splitlines()\n",
     "\n",
     "def process_labels(folder):\n",
-    "    with open(f'../../heart-new/{folder}/RECORDS') as file:\n",
+    "    with open(f'../../../heart-new/{folder}/RECORDS') as file:\n",
     "        records = file.read().splitlines()\n",
-    "    with open(f'../../heart-new/{folder}/RECORDS-normal') as file:\n",
+    "    with open(f'../../../heart-new/{folder}/RECORDS-normal') as file:\n",
     "        normal = set(file.read().splitlines())\n",
-    "    with open(f'../../heart-new/{folder}/RECORDS-abnormal') as file:\n",
+    "    with open(f'../../../heart-new/{folder}/RECORDS-abnormal') as file:\n",
     "        abnormal = set(file.read().splitlines())\n",
     "    normal_dict = {item: 0 for item in list(normal)}\n",
     "    abnormal_dict = {item: 1 for item in list(abnormal)}\n",
@@ -352,7 +352,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflowgpu",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -366,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
